--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 .header {
     display: grid;
     grid-template-columns: 100px 1fr 300px 150px;
-    align-items: center;
+    align-items: centre;
     background-color: #00f2ff;
     color: rgb(255, 255, 255);
     padding: 15px;
@@ -53,3 +53,57 @@ body {
     background-color: white;
     color: #2c3e50;
 }
+.menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.menu ul li {
+    display: inline-block;
+    position: relative;
+}
+
+.menu ul li a {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    padding: 10px 15px;
+    display: block;
+    transition: 0.3s;
+}
+
+.menu ul li a:hover {
+    background-color: #008b8b;
+    border-radius: 5px;
+}
+
+.dropdown-menu {
+    position: absolute;
+    background-color: #00a3a3;
+    min-width: 180px;
+    display: none;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    z-index: 10;
+    padding: 0;
+}
+
+.dropdown-menu li {
+    display: block;
+    width: 100%;
+}
+
+.dropdown-menu li a {
+    padding: 10px;
+    display: block;
+    color: white;
+    width: 100%;
+}
+
+.dropdown-menu li a:hover {
+    background-color: #008080;
+}
+
+.dropdown:hover .dropdown-menu {
+    display: block;
