--- a/styles.css
+++ b/styles.css
@@ -114,3 +114,19 @@ body {
 
 .dropdown:hover .dropdown-menu {
     display: block;
+}
+
+.welcome-message {
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    color: #2c3e50;
+    margin-top: 20px;
+    padding: 10px;
+    background-color: #f8f9fa;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    height:325px;
+    width:1020px ;
+    margin-left: 50px;
+}
